--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,26 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+.filter-container {
+	margin: 50px auto;
+	width: 50%;
+	justify-content: space-around;
+	display: flex;
+}
+.btn-Sort {
+	font-family: 'Syne';
+	font-size: 16px;
+	color:#1D6154;
+	font-weight: 700;
+	background: #FFFEF8;
+	border: 1px solid #1D6154;
+	border-radius: 60px;
+	padding: 9px auto;
+}
+/* .btn-Sort:active {
+	background: #1D6154;
+	color: #FFFEF8;
+} */
 .gallery {
 	width: 100%;
 	display: grid;
