--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -2,7 +2,9 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
+* {
+	scroll-behavior: smooth;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -224,3 +226,79 @@ footer nav ul {
 	margin: 2em
 }
 
+
+/* MODALE */
+
+.modal {
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    text-align: center;
+}
+.modal-wrapper {
+    border-radius: 10px;
+    /* overflow: auto; */
+    width: 600px;
+    max-width: calc(100vh - 20px);
+    max-height: calc(100vh - 20px);
+    padding: 20px;
+    background: #FFF;
+}
+#titlemodal {
+    margin-bottom: 46px;
+    text-align: center;
+    font-family: "Work Sans";
+    font-weight: 400;
+    font-size: 26px;
+}
+.modal-gallery {
+	width: 80%;
+    margin: auto;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	grid-column-gap: 6px;
+	grid-row-gap: 10px;
+}
+.modal-gallery figure {
+    padding: 0;
+    margin: 0;
+    width: 77px;
+}
+.modal-gallery img {
+    width: 77px;
+    /* height: 104px; */
+    /* width: 100%; */
+    object-fit: cover;
+}
+.modal-gallery p {
+    margin: 0;
+    font-family: "Work Sans";
+    font-weight: 400;
+    font-size: 12px;
+}
+input[type="submit"]{
+	font-family: 'Syne';
+	font-weight: 700;
+    font-size: 14px;
+	color: white;
+	background-color: #1D6154;
+    border: 1px solid #1D6154;
+    padding: 10px 50px;
+	margin : 2em auto 30px ;
+	width: auto;
+	text-align: center;
+	border-radius: 60px ;
+}
+.modal a {
+    color: #D65353;
+    text-decoration: none;
+    font-family: "Syne";
+    font-weight: 400;
+    font-size: 14px;
+}
