--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -178,12 +178,15 @@ nav li a:hover {
 	background: #FFFEF8;
 	border: 1px solid #1D6154;
 	border-radius: 60px;
-	padding: 9px auto;
 }
-.active {
-	background: #1D6154;
+.btn-Sort:hover, .active {
 	color: #FFFEF8;
+	background: #1D6154;
 }
+.verified {
+	color: #FFFEF8!important;
+	background: #1D6154!important;
+	}
 .gallery {
 	width: 100%;
 	display: grid;
@@ -479,7 +482,7 @@ justify-content: center;
 #add-picture-btn, #edit-picture-btn {
 	font-family: 'Syne';
 	font-weight: 700;
-	margin : 2em auto ;
+	margin : 2em auto 0.5em;
 	text-align: center;
 	border-radius: 60px ;
 	height: 50px;
