--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -282,6 +282,7 @@ footer nav ul {
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
     text-align: center;
+	animation: fadeIn .3s both;
 }
 .modal-wrapper {
 	position: relative;
@@ -292,6 +293,29 @@ footer nav ul {
     max-height: calc(100vh - 20px);
     padding: 20px;
     background: #FFF;
+	animation: slideFromTop .5s both;
+}
+.modal[aria-hidden="true"] {
+	animation-name: fadeOut;
+}
+.modal[aria-hidden="true"] .modal-wrapper {
+	animation-name: slideToBottom;
+}
+@keyframes fadeIn {
+	from { opacity: 0; }
+	to { opacity: 1; }
+}
+@keyframes fadeOut {
+	from { opacity: 1; }
+	to { opacity: 0; }
+}
+@keyframes slideFromTop {
+	from { transform: translateY(-50px); }
+	to { transform: translateY(0px); }
+}
+@keyframes slideToBottom {
+	from { transform: translateY(0px); }
+	to { transform: translateY(50px); }
 }
 .js-modal-close {
 	position: absolute;
